added crud for all 5 collections
